vpc/vpc-2azs.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "VPC: public and private subnets in two availability zones, an owlhub template",
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "VPC Parameters"
                    },
                    "Parameters": [
                        "ClassB"
                    ]
                }
            ]
        },
        "AWS::CloudFormation::Designer": {
            "1acd5540-155f-4b0a-a25a-b454e17c5822": {
                "size": {
                    "width": 750,
                    "height": 900
                },
                "position": {
                    "x": -470,
                    "y": 50
                },
                "z": 0,
                "embeds": [
                    "18118023-9b4f-47e9-8956-0dff258cf16c",
                    "a8a473a3-7b2b-47bb-9bec-d7660bdadea9",
                    "03362b8e-4f19-400d-9d5f-5683dadbf744",
                    "571a0fe9-bd1a-40e0-bd66-d776ba0a4e33",
                    "a1840b99-654c-4912-93c3-b4ff9c571e75",
                    "6a03a961-e5ba-445d-a137-00a2310136a4",
                    "9daffd7f-52ca-4b66-b714-1f03429a2872",
                    "677d7c08-9655-4b5c-99a5-f8fea5108bae",
                    "d10c6796-4527-4794-a195-03540eae4ef5",
                    "a86f24e3-1ae0-4da9-b9cf-b6aa3f531666"
                ]
            },
            "873436a8-1a66-4d45-9f3c-00244eddfeb1": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 370,
                    "y": 430
                },
                "z": 0,
                "embeds": []
            },
            "a0f177c1-5b85-4455-aa8a-1493ea42c79d": {
                "source": {
                    "id": "1acd5540-155f-4b0a-a25a-b454e17c5822"
                },
                "target": {
                    "id": "873436a8-1a66-4d45-9f3c-00244eddfeb1"
                },
                "z": 0
            },
            "a86f24e3-1ae0-4da9-b9cf-b6aa3f531666": {
                "size": {
                    "width": 100,
                    "height": 80
                },
                "position": {
                    "x": -100,
                    "y": 200
                },
                "z": 1,
                "parent": "1acd5540-155f-4b0a-a25a-b454e17c5822",
                "embeds": [],
                "iscontainedinside": [
                    "1acd5540-155f-4b0a-a25a-b454e17c5822"
                ]
            },
            "d10c6796-4527-4794-a195-03540eae4ef5": {
                "size": {
                    "width": 120,
                    "height": 80
                },
                "position": {
                    "x": -110,
                    "y": 550
                },
                "z": 1,
                "parent": "1acd5540-155f-4b0a-a25a-b454e17c5822",
                "embeds": [],
                "iscontainedinside": [
                    "1acd5540-155f-4b0a-a25a-b454e17c5822"
                ]
            },
            "677d7c08-9655-4b5c-99a5-f8fea5108bae": {
                "size": {
                    "width": 110,
                    "height": 90
                },
                "position": {
                    "x": -110,
                    "y": 370
                },
                "z": 1,
                "parent": "1acd5540-155f-4b0a-a25a-b454e17c5822",
                "embeds": [],
                "iscontainedinside": [
                    "1acd5540-155f-4b0a-a25a-b454e17c5822"
                ]
            },
            "9daffd7f-52ca-4b66-b714-1f03429a2872": {
                "size": {
                    "width": 140,
                    "height": 140
                },
                "position": {
                    "x": -110,
                    "y": 710
                },
                "z": 1,
                "parent": "1acd5540-155f-4b0a-a25a-b454e17c5822",
                "embeds": [],
                "iscontainedinside": [
                    "1acd5540-155f-4b0a-a25a-b454e17c5822"
                ]
            },
            "6a03a961-e5ba-445d-a137-00a2310136a4": {
                "size": {
                    "width": 140,
                    "height": 140
                },
                "position": {
                    "x": 50,
                    "y": 170
                },
                "z": 1,
                "parent": "1acd5540-155f-4b0a-a25a-b454e17c5822",
                "embeds": [
                    "709c853c-f80f-4aa5-b163-3488c93351ab"
                ],
                "iscontainedinside": [
                    "1acd5540-155f-4b0a-a25a-b454e17c5822"
                ]
            },
            "a1840b99-654c-4912-93c3-b4ff9c571e75": {
                "size": {
                    "width": 140,
                    "height": 140
                },
                "position": {
                    "x": 70,
                    "y": 520
                },
                "z": 1,
                "parent": "1acd5540-155f-4b0a-a25a-b454e17c5822",
                "embeds": [],
                "iscontainedinside": [
                    "1acd5540-155f-4b0a-a25a-b454e17c5822"
                ]
            },
            "571a0fe9-bd1a-40e0-bd66-d776ba0a4e33": {
                "size": {
                    "width": 140,
                    "height": 140
                },
                "position": {
                    "x": 60,
                    "y": 350
                },
                "z": 1,
                "parent": "1acd5540-155f-4b0a-a25a-b454e17c5822",
                "embeds": [
                    "91826564-1e5e-4fbe-87a2-4cded1bdec9a"
                ],
                "iscontainedinside": [
                    "1acd5540-155f-4b0a-a25a-b454e17c5822"
                ]
            },
            "03362b8e-4f19-400d-9d5f-5683dadbf744": {
                "size": {
                    "width": 140,
                    "height": 140
                },
                "position": {
                    "x": 90,
                    "y": 710
                },
                "z": 1,
                "parent": "1acd5540-155f-4b0a-a25a-b454e17c5822",
                "embeds": [],
                "iscontainedinside": [
                    "1acd5540-155f-4b0a-a25a-b454e17c5822"
                ]
            },
            "2c1939b2-817d-40fe-8071-ef535e7a6b30": {
                "source": {
                    "id": "6a03a961-e5ba-445d-a137-00a2310136a4"
                },
                "target": {
                    "id": "a86f24e3-1ae0-4da9-b9cf-b6aa3f531666"
                },
                "z": 1
            },
            "5cd40149-792b-4e4a-8dc5-7d36c234a365": {
                "source": {
                    "id": "a1840b99-654c-4912-93c3-b4ff9c571e75"
                },
                "target": {
                    "id": "d10c6796-4527-4794-a195-03540eae4ef5"
                },
                "z": 1
            },
            "a20e42cc-c9fe-4ae9-b3c1-6818963b0f4f": {
                "source": {
                    "id": "571a0fe9-bd1a-40e0-bd66-d776ba0a4e33"
                },
                "target": {
                    "id": "677d7c08-9655-4b5c-99a5-f8fea5108bae"
                },
                "z": 1
            },
            "8b847145-df99-4c46-bd54-6fdd3a5366e3": {
                "source": {
                    "id": "03362b8e-4f19-400d-9d5f-5683dadbf744"
                },
                "target": {
                    "id": "9daffd7f-52ca-4b66-b714-1f03429a2872"
                },
                "z": 1
            },
            "709c853c-f80f-4aa5-b163-3488c93351ab": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 90,
                    "y": 210
                },
                "z": 2,
                "parent": "6a03a961-e5ba-445d-a137-00a2310136a4",
                "embeds": [],
                "isassociatedwith": [
                    "873436a8-1a66-4d45-9f3c-00244eddfeb1"
                ],
                "iscontainedinside": [
                    "6a03a961-e5ba-445d-a137-00a2310136a4"
                ],
                "dependson": [
                    "a0f177c1-5b85-4455-aa8a-1493ea42c79d"
                ]
            },
            "91826564-1e5e-4fbe-87a2-4cded1bdec9a": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 100,
                    "y": 380
                },
                "z": 2,
                "parent": "571a0fe9-bd1a-40e0-bd66-d776ba0a4e33",
                "embeds": [],
                "isassociatedwith": [
                    "873436a8-1a66-4d45-9f3c-00244eddfeb1"
                ],
                "iscontainedinside": [
                    "571a0fe9-bd1a-40e0-bd66-d776ba0a4e33"
                ],
                "dependson": [
                    "a0f177c1-5b85-4455-aa8a-1493ea42c79d"
                ]
            },
            "a8a473a3-7b2b-47bb-9bec-d7660bdadea9": {
                "size": {
                    "width": 210,
                    "height": 280
                },
                "position": {
                    "x": -430,
                    "y": 190
                },
                "z": 1,
                "parent": "1acd5540-155f-4b0a-a25a-b454e17c5822",
                "embeds": [
                    "00363441-a3b7-4eef-91f4-f64493e0a0f3",
                    "60223896-ef30-401a-acc0-1b61ed6956a2"
                ],
                "iscontainedinside": [
                    "1acd5540-155f-4b0a-a25a-b454e17c5822"
                ]
            },
            "18118023-9b4f-47e9-8956-0dff258cf16c": {
                "size": {
                    "width": 200,
                    "height": 340
                },
                "position": {
                    "x": -430,
                    "y": 510
                },
                "z": 1,
                "parent": "1acd5540-155f-4b0a-a25a-b454e17c5822",
                "embeds": [
                    "36c27f51-290f-4c0a-a867-86b0160d6780",
                    "795d970f-7fc9-41a9-99c3-b81be0a2e888"
                ],
                "iscontainedinside": [
                    "1acd5540-155f-4b0a-a25a-b454e17c5822"
                ]
            },
            "4c6cfce6-181e-46a9-9650-68574ec70a66": {
                "source": {
                    "id": "18118023-9b4f-47e9-8956-0dff258cf16c"
                },
                "target": {
                    "id": "9daffd7f-52ca-4b66-b714-1f03429a2872"
                },
                "z": 1
            },
            "194f00ad-17f4-4d03-9c2e-28f54be88fcc": {
                "source": {
                    "id": "a8a473a3-7b2b-47bb-9bec-d7660bdadea9"
                },
                "target": {
                    "id": "677d7c08-9655-4b5c-99a5-f8fea5108bae"
                },
                "z": 1
            },
            "d9325fdc-0cdb-4bf4-82cb-4d5966288a33": {
                "source": {
                    "id": "18118023-9b4f-47e9-8956-0dff258cf16c"
                },
                "target": {
                    "id": "d10c6796-4527-4794-a195-03540eae4ef5"
                },
                "z": 1
            },
            "275f2bad-325c-4d52-8e48-96c7d1fde80d": {
                "source": {
                    "id": "a8a473a3-7b2b-47bb-9bec-d7660bdadea9"
                },
                "target": {
                    "id": "a86f24e3-1ae0-4da9-b9cf-b6aa3f531666"
                },
                "z": 1
            },
            "60223896-ef30-401a-acc0-1b61ed6956a2": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -370,
                    "y": 230
                },
                "z": 2,
                "parent": "a8a473a3-7b2b-47bb-9bec-d7660bdadea9",
                "embeds": [],
                "iscontainedinside": [
                    "a8a473a3-7b2b-47bb-9bec-d7660bdadea9"
                ]
            },
            "00363441-a3b7-4eef-91f4-f64493e0a0f3": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -370,
                    "y": 350
                },
                "z": 2,
                "parent": "a8a473a3-7b2b-47bb-9bec-d7660bdadea9",
                "embeds": [],
                "iscontainedinside": [
                    "a8a473a3-7b2b-47bb-9bec-d7660bdadea9"
                ]
            },
            "795d970f-7fc9-41a9-99c3-b81be0a2e888": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -370,
                    "y": 560
                },
                "z": 2,
                "parent": "18118023-9b4f-47e9-8956-0dff258cf16c",
                "embeds": [],
                "iscontainedinside": [
                    "18118023-9b4f-47e9-8956-0dff258cf16c"
                ]
            },
            "36c27f51-290f-4c0a-a867-86b0160d6780": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": -370,
                    "y": 700
                },
                "z": 2,
                "parent": "18118023-9b4f-47e9-8956-0dff258cf16c",
                "embeds": [],
                "iscontainedinside": [
                    "18118023-9b4f-47e9-8956-0dff258cf16c"
                ]
            }
        }
    },
    "Parameters": {
        "ClassB": {
            "Description": "Class B of VPC (10.XXX.0.0/16)",
            "Type": "Number",
            "Default": 0,
            "ConstraintDescription": "Must be in the range [0-255]",
            "MinValue": 0,
            "MaxValue": 255
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Fn::Sub": "10.${ClassB}.0.0/16"
                },
                "EnableDnsSupport": true,
                "EnableDnsHostnames": true,
                "InstanceTenancy": "default",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "10.${ClassB}.0.0/16"
                        }
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "1acd5540-155f-4b0a-a25a-b454e17c5822"
                }
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "10.${ClassB}.0.0/16"
                        }
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "873436a8-1a66-4d45-9f3c-00244eddfeb1"
                }
            }
        },
        "VPCGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "a0f177c1-5b85-4455-aa8a-1493ea42c79d"
                }
            }
        },
        "SubnetAPublic": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::Sub": "10.${ClassB}.0.0/20"
                },
                "MapPublicIpOnLaunch": true,
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "A public"
                    },
                    {
                        "Key": "Reach",
                        "Value": "public"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "a86f24e3-1ae0-4da9-b9cf-b6aa3f531666"
                }
            }
        },
        "SubnetAPrivate": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::Sub": "10.${ClassB}.16.0/20"
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "A private"
                    },
                    {
                        "Key": "Reach",
                        "Value": "private"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "d10c6796-4527-4794-a195-03540eae4ef5"
                }
            }
        },
        "SubnetBPublic": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::Sub": "10.${ClassB}.32.0/20"
                },
                "MapPublicIpOnLaunch": true,
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "B public"
                    },
                    {
                        "Key": "Reach",
                        "Value": "public"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "677d7c08-9655-4b5c-99a5-f8fea5108bae"
                }
            }
        },
        "SubnetBPrivate": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Fn::Sub": "10.${ClassB}.48.0/20"
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "B private"
                    },
                    {
                        "Key": "Reach",
                        "Value": "private"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "9daffd7f-52ca-4b66-b714-1f03429a2872"
                }
            }
        },
        "RouteTableAPublic": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "A Public"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "6a03a961-e5ba-445d-a137-00a2310136a4"
                }
            }
        },
        "RouteTableAPrivate": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "A Private"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "a1840b99-654c-4912-93c3-b4ff9c571e75"
                }
            }
        },
        "RouteTableBPublic": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "B Public"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "571a0fe9-bd1a-40e0-bd66-d776ba0a4e33"
                }
            }
        },
        "RouteTableBPrivate": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "B Private"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "03362b8e-4f19-400d-9d5f-5683dadbf744"
                }
            }
        },
        "RouteTableAssociationAPublic": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SubnetAPublic"
                },
                "RouteTableId": {
                    "Ref": "RouteTableAPublic"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "2c1939b2-817d-40fe-8071-ef535e7a6b30"
                }
            }
        },
        "RouteTableAssociationAPrivate": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SubnetAPrivate"
                },
                "RouteTableId": {
                    "Ref": "RouteTableAPrivate"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "5cd40149-792b-4e4a-8dc5-7d36c234a365"
                }
            }
        },
        "RouteTableAssociationBPublic": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SubnetBPublic"
                },
                "RouteTableId": {
                    "Ref": "RouteTableBPublic"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "a20e42cc-c9fe-4ae9-b3c1-6818963b0f4f"
                }
            }
        },
        "RouteTableAssociationBPrivate": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SubnetBPrivate"
                },
                "RouteTableId": {
                    "Ref": "RouteTableBPrivate"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "8b847145-df99-4c46-bd54-6fdd3a5366e3"
                }
            }
        },
        "RouteTablePublicAInternetRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTableAPublic"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "709c853c-f80f-4aa5-b163-3488c93351ab"
                }
            },
            "DependsOn": "VPCGatewayAttachment"
        },
        "RouteTablePublicBInternetRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTableBPublic"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "91826564-1e5e-4fbe-87a2-4cded1bdec9a"
                }
            },
            "DependsOn": "VPCGatewayAttachment"
        },
        "NetworkAclPublic": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Public"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "a8a473a3-7b2b-47bb-9bec-d7660bdadea9"
                }
            }
        },
        "NetworkAclPrivate": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Private"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "18118023-9b4f-47e9-8956-0dff258cf16c"
                }
            }
        },
        "SubnetNetworkAclAssociationAPublic": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SubnetAPublic"
                },
                "NetworkAclId": {
                    "Ref": "NetworkAclPublic"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "275f2bad-325c-4d52-8e48-96c7d1fde80d"
                }
            }
        },
        "SubnetNetworkAclAssociationAPrivate": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SubnetAPrivate"
                },
                "NetworkAclId": {
                    "Ref": "NetworkAclPrivate"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "d9325fdc-0cdb-4bf4-82cb-4d5966288a33"
                }
            }
        },
        "SubnetNetworkAclAssociationBPublic": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SubnetBPublic"
                },
                "NetworkAclId": {
                    "Ref": "NetworkAclPublic"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "194f00ad-17f4-4d03-9c2e-28f54be88fcc"
                }
            }
        },
        "SubnetNetworkAclAssociationBPrivate": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SubnetBPrivate"
                },
                "NetworkAclId": {
                    "Ref": "NetworkAclPrivate"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "4c6cfce6-181e-46a9-9650-68574ec70a66"
                }
            }
        },
        "NetworkAclEntryInPublicAllowAll": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "NetworkAclPublic"
                },
                "RuleNumber": 99,
                "Protocol": -1,
                "RuleAction": "allow",
                "Egress": false,
                "CidrBlock": "0.0.0.0/0"
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "60223896-ef30-401a-acc0-1b61ed6956a2"
                }
            }
        },
        "NetworkAclEntryOutPublicAllowAll": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "NetworkAclPublic"
                },
                "RuleNumber": 99,
                "Protocol": -1,
                "RuleAction": "allow",
                "Egress": true,
                "CidrBlock": "0.0.0.0/0"
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "00363441-a3b7-4eef-91f4-f64493e0a0f3"
                }
            }
        },
        "NetworkAclEntryInPrivateAllowVPC": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "NetworkAclPrivate"
                },
                "RuleNumber": 99,
                "Protocol": -1,
                "RuleAction": "allow",
                "Egress": false,
                "CidrBlock": "0.0.0.0/0"
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "795d970f-7fc9-41a9-99c3-b81be0a2e888"
                }
            }
        },
        "NetworkAclEntryOutPrivateAllowVPC": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "NetworkAclPrivate"
                },
                "RuleNumber": 99,
                "Protocol": -1,
                "RuleAction": "allow",
                "Egress": true,
                "CidrBlock": "0.0.0.0/0"
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "36c27f51-290f-4c0a-a867-86b0160d6780"
                }
            }
        }
    },
    "Outputs": {
        "TemplateID": {
            "Description": "owlhub template id.",
            "Value": "vpc/vpc-2azs"
        },
        "TemplateVersion": {
            "Description": "owlhub template version.",
            "Value": "1.0.0"
        },
        "StackName": {
            "Description": "Stack name.",
            "Value": {
                "Fn::Sub": "${AWS::StackName}"
            }
        },
        "AZs": {
            "Description": "AZs",
            "Value": 2,
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-AZs"
                }
            }
        },
        "AZA": {
            "Description": "AZ of A",
            "Value": {
                "Fn::Select": [
                    0,
                    {
                        "Fn::GetAZs": ""
                    }
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-AZA"
                }
            }
        },
        "AZB": {
            "Description": "AZ of B",
            "Value": {
                "Fn::Select": [
                    1,
                    {
                        "Fn::GetAZs": ""
                    }
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-AZB"
                }
            }
        },
        "CidrBlock": {
            "Description": "The set of IP addresses for the VPC.",
            "Value": {
                "Fn::GetAtt": [
                    "VPC",
                    "CidrBlock"
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-CidrBlock"
                }
            }
        },
        "VPC": {
            "Description": "VPC.",
            "Value": {
                "Ref": "VPC"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-VPC"
                }
            }
        },
        "SubnetsPublic": {
            "Description": "Subnets public.",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "SubnetAPublic"
                        },
                        {
                            "Ref": "SubnetBPublic"
                        }
                    ]
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-SubnetsPublic"
                }
            }
        },
        "SubnetsPrivate": {
            "Description": "Subnets private.",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "SubnetAPrivate"
                        },
                        {
                            "Ref": "SubnetBPrivate"
                        }
                    ]
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-SubnetsPrivate"
                }
            }
        },
        "RouteTablesPrivate": {
            "Description": "Route tables private.",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "RouteTableAPrivate"
                        },
                        {
                            "Ref": "RouteTableBPrivate"
                        }
                    ]
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-RouteTablesPrivate"
                }
            }
        },
        "RouteTablesPublic": {
            "Description": "Route tables public.",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "RouteTableAPublic"
                        },
                        {
                            "Ref": "RouteTableBPublic"
                        }
                    ]
                ]
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-RouteTablesPublic"
                }
            }
        },
        "SubnetAPublic": {
            "Description": "Subnet A public.",
            "Value": {
                "Ref": "SubnetAPublic"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-SubnetAPublic"
                }
            }
        },
        "RouteTableAPublic": {
            "Description": "Route table A public.",
            "Value": {
                "Ref": "RouteTableAPublic"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-RouteTableAPublic"
                }
            }
        },
        "SubnetAPrivate": {
            "Description": "Subnet A private.",
            "Value": {
                "Ref": "SubnetAPrivate"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-SubnetAPrivate"
                }
            }
        },
        "RouteTableAPrivate": {
            "Description": "Route table A private.",
            "Value": {
                "Ref": "RouteTableAPrivate"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-RouteTableAPrivate"
                }
            }
        },
        "SubnetBPublic": {
            "Description": "Subnet B public.",
            "Value": {
                "Ref": "SubnetBPublic"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-SubnetBPublic"
                }
            }
        },
        "RouteTableBPublic": {
            "Description": "Route table B public.",
            "Value": {
                "Ref": "RouteTableBPublic"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-RouteTableBPublic"
                }
            }
        },
        "SubnetBPrivate": {
            "Description": "Subnet B private.",
            "Value": {
                "Ref": "SubnetBPrivate"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-SubnetBPrivate"
                }
            }
        },
        "RouteTableBPrivate": {
            "Description": "Route table B private.",
            "Value": {
                "Ref": "RouteTableBPrivate"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-RouteTableBPrivate"
                }
            }
        }
    }
}
